# trench

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  HOTKEYS.md  README.md  REDESIGN_PLANS.md
.pi/agents/: reviewer.md  verifier.md
cli-epub-to-text/: Cargo.toml
cli-pdf-to-text/: Cargo.toml
cli-pdf-to-text/src/: lib.rs
cli-text-reader/: Cargo.toml
cli-text-reader/src/: bookmarks.rs  config.rs  core_state.rs  core_types.rs  debug.rs  demo_script.rs  help.rs  highlights.rs  highlights_persistence.rs  interactive_tutorial.rs  lib.rs  progress.rs  tutorial.rs  utils.rs
cli-text-reader/src/editor/: actions.rs  api.rs  buffer.rs  buffer_split.rs  char_navigation.rs  command_execution.rs  command_execution_core.rs  command_execution_security.rs  command_mode.rs  command_translation.rs  commands.rs  commands_handlers.rs  core.rs  cursor.rs  demo_executor.rs  demo_renderer.rs  display.rs  display_init.rs  display_loop.rs  display_split.rs  event_handler.rs  layout.rs  mod.rs  navigation.rs  normal_mode.rs  normal_navigation_basic.rs  normal_navigation_find.rs  normal_navigation_jumps.rs  normal_search_visual.rs  page_navigation.rs  render_lines.rs  runtime.rs  selection.rs  settings.rs  tutorial_interactive.rs  visual_mode_find.rs  visual_mode_objects.rs  voice_control.rs  widget.rs
cli-text-reader/src/editor/widgets/: demo_hint.rs  mod.rs  status_bar.rs
cli-text-reader/src/utils/: tests.rs
cli-text-reader/src/voice/: elevenlabs.rs  macos_say.rs  mod.rs  piper.rs  playback.rs  provider.rs  stream_buffer.rs
crates/arxiv-render/: Cargo.toml
crates/block-reader/: Cargo.toml
crates/block-reader/src/: bookmarks.rs  lib.rs  main.rs  nav.rs  progress.rs  render.rs  state.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs  provider.rs  provider_registry.rs  storage.rs
crates/chat/src/providers/: claude.rs  openai.rs
crates/chat/src/ui/: mod.rs
crates/notes/: Cargo.toml
crates/notes/src/: colored_tags.rs  editor.rs  entries_list.rs  history.rs  keymap.rs  lib.rs  sorter.rs  storage.rs  theme.rs
crates/notes/src/app/: mod.rs  runner.rs  state.rs
crates/notes/src/filter/: criterion.rs  mod.rs
crates/notes/src/ui/: export_popup.rs  filter_popup.rs  fuzz_find.rs  mod.rs  msg_box.rs  sort_popup.rs  ui_functions.rs
crates/notes/src/ui/entry_popup/: mod.rs  tags.rs
crates/notes/src/ui/help_popup/: global_bindings.rs  keybindings_table.rs  mod.rs  multi_select_bindings.rs
hygg-reader/: Cargo.toml
tmp/: hygg-rewrite-plan-codex.md
trench/: Cargo.toml
trench/src/: app.rs  config.rs  export.rs  history.rs  http.rs  keys.rs  library.rs  main.rs  syntax.rs  tags.rs  theme.rs
trench/src/commands/: dispatch.rs  mod.rs  parser.rs  registry.rs
trench/src/discovery/: agent.rs  ai_query.rs  intent.rs  mod.rs  pipeline.rs  tools.rs
trench/src/github/: mod.rs
trench/src/ingestion/: arxiv.rs  block_fetch.rs  core.rs  crossref.rs  fulltext.rs  huggingface.rs  message.rs  mod.rs  openreview.rs  papers_with_code.rs  rss.rs  semantic_scholar.rs
trench/src/models/: categories.rs  item.rs  mod.rs
trench/src/store/: cache.rs  discovery_cache.rs  enrichment_cache.rs  history.rs  mod.rs  session.rs  tags.rs
trench/src/ui/: layout.rs  mod.rs  repo_markdown.rs  repo_viewer.rs
trench/src/workflows/: discover.rs
(+10 files in other folders)
