[package]
name = "trench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "trench"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
dirs = "5"
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking", "json"] }
quick-xml = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
notes = { path = "../crates/notes" }
chat = { path = "../crates/chat" }
cli-text-reader = { path = "../cli-text-reader" }
syntect = "5"
readability = "0.3"
url = "2"
textwrap = "0.16"
regex = "1"
html2text = "0.15"
pulldown-cmark = "0.12"
