[package]
name = "block-reader"
version = "0.1.0"
edition = "2024"

[lib]
name = "block_reader"
path = "src/lib.rs"

[[bin]]
name = "block-reader"
path = "src/main.rs"

[dependencies]
doc-model = { path = "../doc-model" }
arxiv-render = { path = "../arxiv-render" }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
