[package]
name = "notes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
ratatui = "0.29"
tui-textarea = "0.7"
crossterm = "0.28"
arboard = "3"
rayon = "1"
aho-corasick = "1"
log = "0.4"
textwrap = "0.16"
fuzzy-matcher = "0.3"
